sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/EstimateDetail__c.object-meta.xml
<CustomObject>
    <label>見積明細</label>
    <nameField>
        <displayFormat>E#-{0000}</displayFormat>
        <label>見積明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>