sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/fields/ApprLevel__c.field-meta.xml
<CustomField>
    <fullName>ApprLevel__c</fullName>
    <label>承認レベル</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A 承認不要</fullName>
            </value>
            <value>
                <fullName>B 課長承認</fullName>
            </value>
            <value>
                <fullName>C 部長承認</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>