sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>承認ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.未承認</fullName>
                <default>true</default>
                <label>A.未承認</label>
            </value>
            <value>
                <fullName>B.課長承認待ち</fullName>
            </value>
            <value>
                <fullName>C.部長承認待ち</fullName>
            </value>
            <value>
                <fullName>Z.承認済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>