sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/fields/Approvar1__c.field-meta.xml
<CustomField>
    <fullName>Approvar1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者（課長）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApprovarParent1</relationshipName>
    <type>Lookup</type>
</CustomField>