sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/fields/CPriceList__c.field-meta.xml
<CustomField>
    <fullName>CPriceList__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>価格表</label>
    <referenceTo>PriceListCustom__c</referenceTo>
    <relationshipLabel>見積明細</relationshipLabel>
    <relationshipName>PriceList</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>