sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/fields/NumOfApproval__c.field-meta.xml
<CustomField>
    <fullName>NumOfApproval__c</fullName>
    <formula>CASE( ApprLevel__c , 'A 承認不要', 10, 'B 課長承認', 20, 'C_部長承認', 30, 0)</formula>
    <label>承認レベル番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>