sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>見積情報</label>
    <referenceTo>EstimateInfo__c</referenceTo>
    <relationshipLabel>見積明細</relationshipLabel>
    <relationshipName>EstimateInfo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>