sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <formula>CPriceList__r.EndPrice__c</formula>
    <label>単価(提示)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>