sfdx/sfdxtest1/force-app/main/default/objects/EstimateDetail__c/recordTypes/RT_Approved.recordType-meta.xml
<RecordType>
    <fullName>RT_Approved</fullName>
    <active>true</active>
    <label>承認完了</label>
</RecordType>